public/style.css
body {
    background-color: #CDCDCD;
    margin: 0;
    font-family: Palatino, "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;
}

/* Nav */

/* Canvas Graph Styling */

.chartV-container {
    align-items: center;
}

.chartC-container {
    align-items: center;
}

.main_graphs {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

.graph {
    margin: 5vh;
    text-align: center;
    display: flex;
    flex-direction: column;
}

.tests {
    width: 80vw;
    position: relative;
}

.cases {
    width: 80vw;
    position: relative;
}

#graph1 {}

/* used for pop-up */
.hide {
    display: none;
}

button {
    border-style: solid;
    text-align: center;
    border-radius: 1vh;
    background-color: #1c42aab2;
    padding: 1vh;
    font-size: 4vh;
    color: #EEFBFB;
    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
}

/* Navigation Bar Styling */

nav {
    display: flex;
    justify-content: space-around;
    flex-direction: row;
    align-items: center;
    background-color: #1c42aab2;
    margin-bottom: 20px;
    height: 100px;
}

.logo {
    align-self: center;
}

.logo h1 {
    color: #EEFBFB;
    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
}

.nav-links {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

.nav-links a {
    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
    color: #EEFBFB;
    text-decoration: none;
    font-size: 3vh;
}

.nav-links li {
    list-style: none;
    padding: 2vh;
}

.burger {
    display: none;
}

.burger div {
    width: 25px;
    border-radius: 3px;
    background-color: rgb(187, 187, 187);
    margin: 5px;
    transition: all 0.3s ease;
}

/* burger open styling */
.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

.credit {
    margin-top: 300vh;
}

@keyframes navLinkFade {
    from {
        opacity: 0;
        transform: translateX(50px);
    }

    to {
        opacity: 1;
        transform: translate(0px);
    }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

/* Canvas Styling */
#div1 {
    background-color: #CDCDCD;
}

#map {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 80%;
    length: 400px;
}

h1 {
    text-align: center;
}

p {
    margin-top: 1000px;
}

#credit {
    margin-top: 330px;
}

#source {
    margin-top: 20px;
}

@media screen and (max-width:1000px) {
    #div1 {
        display: inline;
    }

    /* bug fix */
    html {
        overflow-x: hidden;
    }

    /* Nav stlying*/
    .nav-links li {
        opacity: 0;
    }

    .nav-links {
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 8vh;
        background-color: #1c42aab2;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
        z-index: 50;
    }

    .nav-active {
        transform: translateX(0%);
    }

    .burger {
        display: block;
        cursor: pointer;
    }

    .burger div {
        width: 25px;
        height: 3px;
        border-radius: 2px;
        background-color: rgb(187, 187, 187);
        margin: 5px;
        transition: all 0.3s ease;
    }
}

